# timestep_tester

./: Cargo.toml  README.md
src/: configuration.rs  interpolation.rs  lorenz_attractor.rs  main.rs  mouse_cursor.rs  moving_bars.rs  moving_box.rs  simulation.rs  timestep.rs  ui.rs  update_cadence.rs
src/simulation/: lorenz_attractor.rs  mouse_cursor.rs  moving_bars.rs
src/ui/: frame_pacing.rs  lag.rs  presentation_modes.rs  simulation.rs  tabs.rs  timesteps.rs  update_rate.rs
src/update_cadence/: update_cadence_graph.rs  update_cadence_graph.wgsl
