[package]
name = "timestep_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
	"bevy_pbr",
	"bevy_gizmos",
	"bevy_sprite",
	"bevy_ui",
	"bevy_winit",
	"default_font",
	"std",
	"x11",
] }
bitflags = { version = "2.9", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
num_enum = "0.7"
