[package]
name = "timestep_tester"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
	"bevy_dev_tools",
	"bevy_gizmos",
	"bevy_input_focus",
	"bevy_pbr",
	"bevy_picking",
	"bevy_sprite_render",
	"bevy_ui_render",
	"bevy_winit",
	"default_font",
	"experimental_bevy_feathers",
	"std",
	"x11",
] }
bitflags = { version = "2.9", features = ["std"] }
num_enum = "0.7"
